Archive2/99/e2cb53f2114298/output
main.cpp:5:6: error: template-id 'foo<int>' for 'void foo(int)' does not match any template declaration
 void foo<int>(int);
      ^
