Archive2/99/e2cb53f2114298/main.cpp
template<typename T>
void foo();

template
void foo<int>(int);